Bug 1288915 - Part 1: Make nsExternalAppHandler respect existing channel ApplyConversion flag. r=jdm, a=sledru